WebApiExRatePaymentProvider 리팩토링
- Checked Exception -> UnChecked Exception 으로 변경(WebApiExRatePaymentProvider 를 제외하고 다른 클래스에서는 IOException 을 알 필요 없음)