@@ -1,12 +1,15 @@
 package com.example.tobyspringinaction.exrate;
 
 import com.example.tobyspringinaction.payment.ExRateProvider;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.stream.Collectors;
@@ -14,19 +17,33 @@ import java.util.stream.Collectors;
 public class WebApiExRatePaymentProvider implements ExRateProvider {
 
     @Override
-    public BigDecimal getExRate(String currency) throws IOException {
-        URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-        URLConnection urlConnection = (URLConnection) url.openConnection();
-        BufferedReader br = new BufferedReader(new InputStreamReader(urlConnection.getInputStream()));
-        String collect = br.lines().collect(Collectors.joining());
-        br.close();
+    public BigDecimal getExRate(String currency) {
+        String url = "https://open.er-api.com/v6/latest/" + currency;
+
+        URI uri;
+        try {
+            uri = new URI(url);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+
+        String response;
+        try {
+            URLConnection urlConnection = (URLConnection) uri.toURL().openConnection();
+            try(BufferedReader br = new BufferedReader(new InputStreamReader(urlConnection.getInputStream()))) {
+                response = br.lines().collect(Collectors.joining());
+            }
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
 
         ObjectMapper mapper = new ObjectMapper();
-
-        ExRate exRate = mapper.readValue(collect, ExRate.class);
-
-        System.out.println("[ExRateProvider::WebApiExRatePaymentProvider] exRate.rates().get(\"KRW\") = " + exRate.rates().get("KRW"));
-
-        return exRate.rates().get("KRW");
+        ExRate exRate;
+        try {
+            exRate = mapper.readValue(response, ExRate.class);
+            return exRate.rates().get("KRW");
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
